[package]
name = "learn_vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
lazy_static = "1.4.0"
log = "0.4.17"
nalgebra-glm = "0.17.0"
png = "0.17.5"
pretty_env_logger = "0.4.0"
thiserror = "1.0.31"
tobj = "2.0.4"
vulkanalia = { version = "=0.12.0", features = ["libloading", "window"] }
winit = "0.26.1"